# XunFei-Planning-SmartCar

./: README.en.md  README.md
2d_lidar_undistortion-master/launch/: lidar_undistortion_online.launch
fdilink_ahrs/launch/: ahrs_driver.launch
laser_detection/: CMakeLists.txt
laser_detection/config/: laser_detection.yaml
laser_detection/launch/: laser_detection.launch
laser_detection/src/: cost_map_points.cpp  laser_detection.cpp  laser_object.cpp  laser_save.cpp  laser_tracking.cpp  pointcloud_save.cpp  pointcloud_sub.cpp
roborts_costmap/: CMakeLists.txt
roborts_costmap/config/: 3.prototxt  C2.prototxt  C3.prototxt  costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  detection_layer_config.prototxt  inflation_layer_config_min.prototxt  obstacle_layer_config.prototxt
roborts_costmap/src/: costmap_2d.cpp
roborts_decision/: CMakeLists.txt  sel_behavior_node.cpp
roborts_decision/blackboard/: blackboard.h
roborts_decision/example_behavior/: goal_behavior.h
roborts_decision/executor/: chassis_executor.cpp  chassis_executor.h
roborts_localization/: localization_config.h  localization_node.cpp
roborts_localization/config/: localization.yaml
roborts_msgs/: CMakeLists.txt
roborts_planning/: CMakeLists.txt
roborts_planning/global_planner/informed_rrt_star_planner/: CMakeLists.txt  informed_rrt_star.cpp  informed_rrt_star.h
roborts_planning/global_planner/informed_rrt_star_planner/config/: informed_rrt_star_planner_config.prototxt
roborts_planning/global_planner/informed_rrt_star_planner/proto/: informed_rrt_star_config.pb.cc  informed_rrt_star_config.pb.h  informed_rrt_star_config.proto
robot_pose_ekf-master/: robot_pose_ekf.launch
startup_scripts/: .initdev_mini.sh.swp
xunfei_params/: .man.txt.swp  0.1.sh  1.sh  1.txt  2.sh  2.txt  3.sh  4.sh  5.sh  Ag.sh  Ag.txt  Au.sh  Au.txt  C.sh  C.txt  C6H5C2H5.sh  C6H5C3H7.sh  C6H5C4H9.sh  C6H5OH.sh  CH3C6H4CH3.sh  Ca.sh  Ca.txt  CaCO3.sh  H2O.sh  H2SO4.sh  H2SO4.txt  KMnO4.sh  Na2S2O3.sh  NaOH.sh  NaOH.txt  Zn.sh  Zn.txt  kuai.sh  kuai.txt  laser1.sh  laser2.sh  laser3.sh  man.sh  man_gan.sh  photo.sh  (+4 more)
(+179 files in other folders)
